--- a/style.css
+++ b/style.css
@@ -5,26 +5,35 @@ margin: 0;}
 h1{
     font-size:50px;
 }
-section{
+.top-banner {
     background-image: url(image/top-banner.png);
     display: flex;
+    background-repeat: no-repeat;
+    padding-bottom: 150px;
     
 }
 .name-color{
     color: tomato;
 }
 .half-width{
-    width: 100%;
-    padding-left: 3%;
+    width: 50%;
+    padding-left: 2%;
 }
 .half-width img{
-    width: 85%;
+    width:85%;
+    padding-top: 50px;
 }
 .hire-button{
     text-decoration: none;
-    background: tomato;
+    background-image: linear-gradient(tomato,salmon);
     padding: 10px 40px;
     color: white;
     font-weight: 700px;
     border-radius: 5px;
+}
+.mid-part{
+    display: flex;
+    background-image: url(image/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right;
 }
